Tue May 14 02:56:23 2002  Tim Janik  <timj@gtk.org>

	* davxtalstrings.c: some cleanups, provide sane trigger facility
	via input signal and frequency input. finally provide an icon for
	this plugin.

Mon May 13 22:17:17 2002  Tim Janik  <timj@gtk.org>

	* freeverb/bsefreeverb.[hc] (free_verb_reconnect): reset
	the freverb filter when the module got reconnected.
	
	* bsesimpleresonancefilter.[hc]: disable this test module,
	BSE's new biquad filter does things way better.
	
	* *.c: fixes due to new GslClass layout.

Sun May  5 20:31:16 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.[hc]: move this into BSE as it's an fundamental
	component and introduces procedures.

Sun Apr 21 21:18:21 2002  Tim Janik  <timj@gtk.org>

	* bseadder.[hc]: implement input channels as jstreams.

	* bsemixer.[hc]: slight cleanups.

Tue Apr 16 08:24:53 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: remove this module from plugins.

	* *.c: category fixes.

Tue Apr  9 03:03:53 2002  Tim Janik  <timj@gtk.org>

	* implemented BseFreeVerb module, a wrapper around the public domain
	FreeVerb code by Jeremy "Jezar" Wakefield.

	* freeverb/comb.hpp, comb.cpp:
	* freeverb/denormals.h, tuning.h:
	* freeverb/revmodel.hpp, revmodel.cpp:
	* freeverb/allpass.hpp, freeverb/allpass.cpp:
	Freeverb - SOURCE CODE in the public domain, written by Jezar
	at Dreampoint - http://www.dreampoint.co.uk.

	* freeverb/bsefreeverb.[hc]:
	* freeverb/bsefreeverbcpp.h freeverb/bsefreeverbcpp.cpp:
	BseFreeVerb module implementation and C++ wrapper code.

Mon Apr  8 22:19:42 2002  Tim Janik  <timj@gtk.org>

	* davorgan.[hc]: ported DavOrgan to the engine, so we have our
	organ back.

Fri Apr  5 09:15:18 2002  Tim Janik  <timj@gtk.org>

	* bsegenosc.[hc]: fix istream count.

Sun Mar 31 19:47:57 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.c (bse_wave_osc_set_property): use bse_item_uncross() to
	remove the cross reference to an old wave, because we want the
	notifier to be executed.
